tests/errors/test-private-member-1.script

class A
{
protected:
  static int foo() { return 66; }
};

int n = A::foo();

//>8:15: error C87: foo is protected within this context
